--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,16 @@
+2020-02-01  Simon Fraser  <simon.fraser@apple.com>
+
+        Closing a MiniBrowser WK2 window does not release the WKWebView
+        https://bugs.webkit.org/show_bug.cgi?id=203185
+
+        Reviewed by Wenson Hsieh.
+        
+        Use a weak WKWebView reference in the _textFinder.hideInterfaceCallback() block
+        to avoid a retain cycle that keeps the window controller and WKWebView alive.
+
+        * MiniBrowser/mac/WK2BrowserWindowController.m:
+        (-[WK2BrowserWindowController awakeFromNib]):
+
 2020-01-31  David Quesada  <david_quesada@apple.com>
 
         REGRESSION(r252185): NetworkSessionCocoa cancels downloads that receive authentication challenges
