--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,34 @@
+2020-02-01  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        fast/events/touch/ios/long-press-on-link.html consistently times out after r254699
+        https://bugs.webkit.org/show_bug.cgi?id=207095
+
+        Reviewed by Darin Adler.
+
+        After <https://trac.webkit.org/r254699>, tests that end without causing presented view controllers to dismiss
+        will always cause the subsequent test to time out. This happens all the time with the layout test
+        fast/events/touch/ios/long-press-on-link.html, which runs after fast/events/touch/ios/long-press-on-image.html;
+        both of these tests long press previewable elements to present a context menu, but don't attempt to dismiss
+        these previews.
+
+        Address this by tapping at the web view's origin after ending the long press gesture, which causes the preview
+        view controllers that were presented by the test to dismiss.
+
+        * fast/events/touch/ios/long-press-on-image-expected.txt:
+        * fast/events/touch/ios/long-press-on-image.html:
+        * fast/events/touch/ios/long-press-on-link-expected.txt:
+        * fast/events/touch/ios/long-press-on-link.html:
+
+        Modernize these layout tests by adopting helper methods for driving interaction (instead of directly using
+        testRunner.runUIScript). Also, use the testing helpers in `js-test.js`, and add descriptions to each test.
+
+        * resources/ui-helper.js:
+        (window.UIHelper.longPressAndGetContextMenuContentAt.return.new.Promise):
+        (window.UIHelper.longPressAndGetContextMenuContentAt):
+
+        Make this resolve the promise to a parsed JSON object instead of a JSON string. Currently, the result is a JSON
+        string that is parsed at each call site.
+
 2020-02-01  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         Non-alphabetical \c escapes should be syntax errors in Unicode patterns only
