--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,16 @@
+2020-02-01  Michael Catanzaro  <mcatanzaro@gnome.org>
+
+        Silence compiler warnings
+        https://bugs.webkit.org/show_bug.cgi?id=207015
+
+        Reviewed by Darin Adler.
+
+        Use UNUSED_VARIABLE() for variable that is only used inside RELEASE_LOG(), which is
+        Apple-specific.
+
+        * NetworkProcess/NetworkResourceLoader.cpp:
+        (WebKit::NetworkResourceLoader::didFailLoading):
+
 2020-02-01  Devin Rousso  <drousso@apple.com>
 
         Web Inspector: move the items in the toolbar into the tab bar to save vertical space
