ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) on animations/keyframe-autoclose-brace.html https://bugs.webkit.org/show_bug.cgi?id=207071 <rdar://problem/59076249>
Patch by Antoine Quint <graouts@apple.com> on 2020-02-02
Reviewed by Dean Jackson.

Source/WebCore:

We cannot add CSSPropertyInvalid to a HashSet<CSSPropertyID>, because it triggers an ASSERT, and also we shouldn't
because we wouldn't know how to animate that CSS property.

* animation/AnimationTimeline.cpp:
(WebCore::compileTransitionPropertiesInStyle):

LayoutTests:

The crash is fixed, we can start running the test as expected again.

* platform/ipad/TestExpectations:

Canonical link: https://commits.webkit.org/220106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255552 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,15 @@
+2020-02-02  Antoine Quint  <graouts@apple.com>
+
+        ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) on animations/keyframe-autoclose-brace.html
+        https://bugs.webkit.org/show_bug.cgi?id=207071
+        <rdar://problem/59076249>
+
+        Reviewed by Dean Jackson.
+
+        The crash is fixed, we can start running the test as expected again.
+
+        * platform/ipad/TestExpectations:
+
 2020-02-01  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         fast/events/touch/ios/long-press-on-link.html consistently times out after r254699
