--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,16 @@
+2020-02-02  Sam Weinig  <weinig@apple.com>
+
+        Update style checker with new locations OS version checks are allowed
+        https://bugs.webkit.org/show_bug.cgi?id=207106
+
+        Reviewed by Alexey Proskuryakov.
+
+        * Scripts/webkitpy/style/checkers/cpp.py:
+        (check_os_version_checks):
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
+        (WebKitStyleTest.test_os_version_checks):
+        Update path check to allow anything with the pattern "Source/WTF/wtf/Platform[a-zA-Z]+\.h"
+
 2020-02-01  Simon Fraser  <simon.fraser@apple.com>
 
         Closing a MiniBrowser WK2 window does not release the WKWebView
